# render-json-resume

./: .gitignore  .replit  DEVELOPERS.md  Dockerfile  README.md  pyproject.toml  replit.md  sample_resume.json
.github/workflows/: build-executables.yml  tests.yml
src/resume_forge/: __init__.py  cli.py  schema.py
src/resume_forge/generators/: __init__.py  base.py  docx_generator.py  pdf_generator.py
tests/: __init__.py  test_cli.py  test_generators.py  test_schema.py  test_unicode.py
