[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resume-forge"
version = "0.1.0"
description = "CLI utility to convert JSON Resume to native PDF or DOCX"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["resume", "json-resume", "pdf", "docx", "cli"]
authors = [
    { name = "Resume Forge", email = "contact@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "reportlab>=4.0.0",
    "python-docx>=1.0.0",
]

[project.scripts]
resume-forge = "resume_forge.cli:main"

[project.urls]
Homepage = "https://github.com/example/resume-forge"
Documentation = "https://github.com/example/resume-forge#readme"
Issues = "https://github.com/example/resume-forge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/resume_forge"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
